client/styles.css
/* ... */
@keyframes pop {
    0% {
        transform: scale(0.7);
    }
    40% {
        transform: scale(1.2);
    }
}

x-peer[drop] x-icon {
    transform: scale(1.1);
}


/* Footer */

footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    align-items: center;
    padding: 0 0 16px 0;
}

footer .logo {
    --icon-size: 80px;
    margin-bottom: 8px;
    color: var(--primary-color);
}

footer .font-body2 {
    color: var(--primary-color);
}

@media (min-height: 800px) {
    footer {
        margin-bottom: 16px;
    }
}


/* Dialog */

x-dialog x-background {
    background: rgba(0, 0, 0, 0.61);
    z-index: 10;
    transition: opacity 300ms;
    will-change: opacity;
    padding: 16px;
}

x-dialog x-paper {
    z-index: 3;
    background: var(--surface-color);
    border-radius: 8px;
    padding: 16px 24px;
    width: 100%;
    max-width: 400px;
    box-sizing: border-box;
    transition: transform 300ms;
    will-change: transform;
}

x-dialog:not([show]) {
    pointer-events: none;
}

x-dialog:not([show]) x-paper {
    transform: scale(0.1);
}

x-dialog:not([show]) x-background {
    opacity: 0;
}

x-dialog .row-reverse>.button {
    margin-top: 16px;
    margin-left: 8px;
}

x-dialog a {
    color: var(--primary-color);
}


/* Receive Dialog */

#receiveTextDialog #text {
    width: 100%;
    word-break: break-all;
    max-height: 300px;
    overflow-x: hidden;
    overflow-y: auto;
    -webkit-user-select: all;
    -moz-user-select: all;
    user-select: all;
}


/* Button */

.button {
    padding: 0 16px;
    box-sizing: border-box;
    min-height: 36px;
    min-width: 100px;
    font-size: 14px;
    line-height: 24px;
    font-weight: 700;
    letter-spacing: 0.12em;
    text-transform: uppercase;
    white-space: nowrap;
    cursor: pointer;
    user-select: none;
    background: inherit;
    color: var(--primary-color);
}

.button,
.icon-button {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    touch-action: manipulation;
    border: none;
    outline: none;
    background: transparent;
}

.button:before,
.icon-button:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: currentColor;
    opacity: 0;
    transition: opacity 300ms;
}

.button:hover:before,
.icon-button:hover:before {
    opacity: 0.1;
}

.button:before {
    border-radius: 8px;
}

.button:focus:before,
.icon-button:focus:before {
    opacity: 0.2;
}

button::-moz-focus-inner {
    border: 0;
}


/* Icon Button */

.icon-button {
    width: 40px;
    height: 40px;
}

.icon-button:before {
    border-radius: 50%;
}


/* Text Input */

input {
    width: 100%;
    box-sizing: border-box;
    border: none;
    outline: none;
    padding: 16px 24px;
    background: var(--input-bg);
    border-radius: 50px;
    margin: 8px 0;
    line-height: 16px;
    font-size: 14px;
}


/* Info Animation */

#about {
    color: var(--surface-text-color);
    z-index: 11;
    overflow: hidden;
    pointer-events: none;
    text-align: center;
}

#about .fade-in {
    transition: opacity 300ms;
    will-change: opacity;
    transition-delay: 300ms;
    z-index: 11;
    pointer-events: all;
}

#about:not(:target) .fade-in {
    opacity: 0;
    pointer-events: none;
    transition-delay: 0;
}

#about .logo {
    --icon-size: 96px;
}

#about x-background {
    position: absolute;
    top: calc(32px - 200px);
    right: calc(32px - 200px);
    width: 400px;
    height: 400px;
    border-radius: 50%;
    background: var(--primary-color);
    transform: scale(0);
    z-index: -1;
}

#about .instruction {
    max-width: 400px;
    margin: 30px;
}


/* Hack such that initial scale(0) isn't animated */
#about x-background {
    will-change: transform;
    transition: transform 800ms cubic-bezier(0.77, 0, 0.175, 1);
}

#about:target x-background {
    transform: scale(10);
}

#about .row a {
    margin: 8px 8px -16px;
}


/* Loading Indicator */

@keyframes spin-continuous {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.progress {
    width: 80px;
    height: 80px;
    position: absolute;
    top: 0px;
    clip: rect(0px, 80px, 80px, 40px);
    --progress: rotate(0deg);
    transition: transform 200ms;
}

.circle {
    width: 72px;
    height: 72px;
    border: 4px solid var(--primary-color);
    border-radius: 40px;
    position: absolute;
    clip: rect(0px, 40px, 80px, 0px);
    will-change: transform;
    transform: var(--progress);
}

.over50 {
    clip: rect(auto, auto, auto, auto);
}

.over50 .circle.right {
    transform: rotate(180deg);
}


/* Toast */

.toast-container {
    padding: 0 8px 24px;
    overflow: hidden;
    pointer-events: none;
}

x-toast {
    position: absolute;
    min-height: 48px;
    bottom: 24px;
    width: 100%;
    max-width: 344px;
    background-color: rgba(48, 48, 48, 0.95);
    color: rgba(255, 255, 255, 0.95);
    align-items: center;
    box-sizing: border-box;
    padding: 8px 24px;
    z-index: 20;
    transition: opacity 200ms, transform 300ms ease-out;
    cursor: default;
    line-height: 24px;
    border-radius: 8px;
    pointer-events: all;
}

x-toast:not([show]):not(:hover) {
    opacity: 0;
    transform: translateY(100px);
}


/* Modal */

.modal-container {
    overflow: hidden;
    position: absolute;
    min-height: 48px;
    top: 7%;
    width: 100%;
    max-width: 350px;
    background-color: rgba(48, 48, 48, 0.95);
    color: rgba(255, 255, 255, 0.95);
    align-items: center;
    box-sizing: border-box;
    padding: 30px 16px 20px 16px;
    z-index: 20;
    transition: opacity 200ms, transform 300ms ease-out;
    cursor: default;
    line-height: 24px;
    border-radius: 8px;
    pointer-events: all;
}
/* ... */

